Recent-works and our-service sections

--- a/index.html
+++ b/index.html
@@ -5,9 +5,84 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Document</title>
+    <link rel="stylesheet" href="./src/styles/normalize.css">
+    <link rel="stylesheet" href="./src/styles/main.css">
+
+    <title>TEAM NAME - POTFOLIO</title>
   </head>
   <body>
+
+    <header></header>
+
+    <main>
+      <section id="home"></section>
+      <section id="recent-works">
+        <h2>recent works</h2>
+        <div class="container">
+          <div class="recent-work">
+            <header class="recent-work__header">
+              <h3 class="recent-work__name">resecurety</h3>
+              <span class="recent-work__service-type">site</span>
+            </header>
+            <img class="recent-work__preview" src="./src/icons/our-projects/sample1.png" alt="sample1" />
+          </div>
+          <div class="recent-work">
+            <header class="recent-work__header">
+              <h3 class="recent-work__name">coldy</h3>
+              <span class="recent-work__service-type">promotion</span>
+            </header>
+            <img class="recent-work__preview" src="./src/icons/our-projects/sample2.png" alt="sample2" />
+          </div>
+          <div class="recent-work">
+            <header class="recent-work__header">
+              <h3 class="recent-work__name">mediasoft</h3>
+              <span class="recent-work__service-type">site</span>
+            </header>
+            <img class="recent-work__preview" src="./src/icons/our-projects/sample3.png" alt="sample3" />
+          </div>
+          <div class="recent-work">
+            <header class="recent-work__header">
+              <h3 class="recent-work__name">awwards</h3>
+              <span class="recent-work__service-type">promotion</span>
+            </header>
+            <img class="recent-work__preview" src="./src/icons/our-projects/sample4.png" alt="sample4" />
+          </div>
+        </div>
+        <a class="all-works" href="#">
+          <span>all works</span>
+          <div class="all-works__arrow">
+            <img src="./src/icons/our-projects/right-arrow.svg" alt="right-arrow" />
+          </div>
+        </a>
+      </section>
+      <section id="our-service">
+        <h2>our service</h2>
+        <div class="our-serveces">
+          <a href="#" class="our-serveces_service">
+            <span class="service__number">01</span>
+            <span class="service__description">site design</span>
+            <img src="./src/icons/our-projects/right-arrow-gray.svg" alt="right-arrow">
+          </a>
+          <a href="#" class="our-serveces_service">
+            <span class="service__number">02</span>
+            <span class="service__description">site development</span>
+            <img src="./src/icons/our-projects/right-arrow-gray.svg" alt="right-arrow">
+          </a>
+          <a href="#" class="our-serveces_service">
+            <span class="service__number">03</span>
+            <span class="service__description">TARGETED ADVERTISING</span>
+            <img src="./src/icons/our-projects/right-arrow-gray.svg" alt="right-arrow">
+          </a>
+          <a href="#" class="our-serveces_service">
+            <span class="service__number">04</span>
+            <span class="service__description">social media promotion</span>
+            <img src="./src/icons/our-projects/right-arrow-gray.svg" alt="right-arrow">
+          </a>
+        </div>
+      </section>
+    </main>
+
+    <footer></footer>
 
   </body>
 </html>
