Add hover effects to links and add noise bg effect

--- a/index.html
+++ b/index.html
@@ -24,28 +24,36 @@
               <h3 class="recent-work__name">resecurety</h3>
               <span class="recent-work__service-type">site</span>
             </header>
-            <img class="recent-work__preview" src="./src/icons/our-projects/sample1.png" alt="sample1" />
+            <a href="#">
+              <img class="recent-work__preview" src="./src/icons/our-projects/sample1.png" alt="sample1" />
+            </a>
           </div>
           <div class="recent-work">
             <header class="recent-work__header">
               <h3 class="recent-work__name">coldy</h3>
               <span class="recent-work__service-type">promotion</span>
             </header>
-            <img class="recent-work__preview" src="./src/icons/our-projects/sample2.png" alt="sample2" />
+            <a href="#">
+              <img class="recent-work__preview" src="./src/icons/our-projects/sample2.png" alt="sample2" />
+            </a>
           </div>
           <div class="recent-work">
             <header class="recent-work__header">
               <h3 class="recent-work__name">mediasoft</h3>
               <span class="recent-work__service-type">site</span>
             </header>
-            <img class="recent-work__preview" src="./src/icons/our-projects/sample3.png" alt="sample3" />
+            <a href="#">
+              <img class="recent-work__preview" src="./src/icons/our-projects/sample3.png" alt="sample3" />
+            </a>
           </div>
           <div class="recent-work">
             <header class="recent-work__header">
               <h3 class="recent-work__name">awwards</h3>
               <span class="recent-work__service-type">promotion</span>
             </header>
-            <img class="recent-work__preview" src="./src/icons/our-projects/sample4.png" alt="sample4" />
+            <a href="#">
+              <img class="recent-work__preview" src="./src/icons/our-projects/sample4.png" alt="sample4" />
+            </a>
           </div>
         </div>
         <a class="all-works" href="#">
