--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
     <title>TEAM NAME - POTFOLIO</title>
   </head>
   <body>
+    <script src="/src/modules/three.js"></script>
+    <script src="/src/modules/cannon.js"></script>
+    <script src="/src/modules/CannonDebugRenderer.js"></script>
+    <script src="/src/script/3D.js" type="module"></script>
 
-    <header></header>
+    <header>
+      <div class="Name">S&C Group</div>
+    </header>
 
     <main>
       <section id="home"></section>
