Fix form fields style

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="./src/styles/normalize.css">
     <link rel="stylesheet" href="./src/styles/main.css">
 
+    <script defer src="./src/scripts/main.js"></script>
+
     <script defer src="/src/modules/three.js"></script>
     <script defer src="/src/modules/cannon.js"></script>
     <script defer src="/src/modules/CannonDebugRenderer.js"></script>
-    <script defer src="/src/script/3D.js" type="module"></script>
+    <script defer src="/src/scripts/3D.js" type="module"></script>
 
     <title>S&C Group</title>
   </head>
