Fix primary colors and form input states

--- a/index.html
+++ b/index.html
@@ -109,22 +109,22 @@
           <a href="#" class="our-serveces_service">
             <span class="service__number">01</span>
             <span class="service__description">site design</span>
-            <img src="./src/icons/our-projects/right-arrow-gray.svg" alt="right-arrow">
+            <div class="service__arrow"></div>
           </a>
           <a href="#" class="our-serveces_service">
             <span class="service__number">02</span>
             <span class="service__description">site development</span>
-            <img src="./src/icons/our-projects/right-arrow-gray.svg" alt="right-arrow">
+            <div class="service__arrow"></div>
           </a>
           <a href="#" class="our-serveces_service">
             <span class="service__number">03</span>
             <span class="service__description">TARGETED ADVERTISING</span>
-            <img src="./src/icons/our-projects/right-arrow-gray.svg" alt="right-arrow">
+            <div class="service__arrow"></div>
           </a>
           <a href="#" class="our-serveces_service">
             <span class="service__number">04</span>
             <span class="service__description">social media promotion</span>
-            <img src="./src/icons/our-projects/right-arrow-gray.svg" alt="right-arrow">
+            <div class="service__arrow"></div>
           </a>
         </div>
       </section>
