Add CDN link to CANNON.js

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script defer src="./src/scripts/main.js"></script>
 
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.js"></script>
-    <script defer src="./src/modules/cannon.js"></script>
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.js" integrity="sha512-+E0UhA8ib3H5AlREMX1I0mc3R7HMkQYH+hkkfW47aLGMnVJwod+jJ2jxe94xYyUdqPs9AFDHUxKnJzScEP5cmA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script defer src="./src/scripts/3D.js" type="module"></script>
 
     <title>S&C Group</title>
