add adaptive on auth, reg, chat

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
       </section>
       <section id="chat">
-        <img src="./src/icons/our-projects/S&CChat.svg" class="chat__logo">
+        <img src="./src/icons/our-projects/S&CCHAT.png" class="chat__logo">
         <div class="chat__back">
           <div class="chat__message__win">
             <div class="message_user">
